# reelforge-standalone

./: .gitignore  AGENT_TEAM_ARCHITECTURE.md  AUREXIS_ABSOLUTE_ULTIMATE_SPEC.md  AUTOMATIC_EVENT_DISCOVERY_SYSTEM.md  CLAUDE.md  CORTEX_ORCHESTRATOR.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  DYNAMIC_HOOK_GRAPH_SYSTEM.md  FFNC.md  FFNC_IMPLEMENTATION.md  FLUXFORGE_MODULAR_SLOT_BUILDER.md  FLUXFORGE_SLOTLAB_ULTIMATE_ARCHITECTURE.md  FLUXMACRO_SYSTEM.md  FLUX_MASTER_TODO.md  FLUX_MASTER_VISION_2026.md  FluxForge_Audio_Engine_SRC_MonoStereo_Architecture.md  FluxForge_Authoring_Intelligence_Layer_AIL_v1.0.md  FluxForge_DRC_Manifest_Safety_Envelope_v1.0.md  FluxForge_Device_Preview_Engine_DSP_Architecture_v1_FINAL.md  FluxForge_Device_Preview_Matrix_v1.0.md  FluxForge_Dynamic_Priority_Matrix_DPM_v1.0.md  FluxForge_Global_Energy_Governance_Slot_Profile_System_v1.0.md  FluxForge_Hook_Sequence_Emotional_Engine_Ultimate.md  FluxForge_Monitoring_Layer_Integration_Spec_FINAL.md  FluxForge_Pre_Bake_Simulation_Engine_PBSE_v1.0.md  FluxForge_SAMCL_Spectral_Allocation_Masking_Control_v1.0.md  FluxForge_Scale_Stability_Suite_v1.0.md  FluxForge_Slot_Audio_Naming_Bible_v1.0.md  FluxForge_Slot_DAW_Gameplay_Aware_Architecture_v1.0.md  FluxForge_Smart_Authoring_Mode_SAM_v1.0.md  FluxForge_ULTIMATE_Device_Preview_Master_Database_v2.md  FluxForge_ULTIMATE_Device_Preview_Master_Database_v3_FINAL.md  FluxForge_Ultimate_Hook_Translation_Architecture.md  FluxForge_Unified_Control_Panel_UCP_v1.0.md  HELIX_AUDIT_2026-05-07.md  HELIX_QA_MASTER_TODO.md  IGT_Ultimate_AudioSpec_FULL.xlsx  PLUGIN_GUI_HOSTING.md  REAPER_FEATURES_ANALYSIS.md  (+13 more)
ai-control-core/acc/: Cargo.toml  acc.config.json  openapi.json
ai-control-core/acc/.cargo/: config.toml
ai-control-core/acc/src/: config.rs  diffpack.rs  gitops.rs  gpt_api.rs  main.rs  server.rs  state.rs  watcher.rs
crates/cortex-daemon/: Cargo.toml
crates/cortex-daemon/src/: main.rs  protocol.rs  server.rs
crates/rf-ab-sim/: Cargo.toml
crates/rf-ab-sim/src/: config.rs  ffi.rs  lib.rs  result.rs  simulator.rs
crates/rf-ai-gen/: Cargo.toml
crates/rf-ai-gen/src/: classify.rs  generation.rs  lib.rs  postprocess.rs  prompt.rs
crates/rf-ale/: Cargo.toml
crates/rf-ale/src/: context.rs  engine.rs  lib.rs  profile.rs  rules.rs  signals.rs  stability.rs  transitions.rs
crates/rf-audio/: Cargo.toml
crates/rf-audio-diff/: Cargo.toml
crates/rf-audio-diff/src/: analysis.rs  config.rs  determinism.rs  diff.rs  golden.rs  lib.rs  loader.rs  metrics.rs  quality_gates.rs  report.rs  spectral.rs
crates/rf-audio/src/: aoip.rs  asio.rs  coreaudio.rs  device.rs  dsd_output.rs  engine.rs  error.rs  lib.rs  multi_output.rs  ringbuf.rs  stream.rs  thread_priority.rs
crates/rf-aurexis/: Cargo.toml
crates/rf-aurexis/src/: lib.rs
crates/rf-bench/: Cargo.toml
crates/rf-bench/benches/: buffer_benchmarks.rs  dsp_benchmarks.rs  simd_benchmarks.rs
crates/rf-bench/examples/: determinism_check.rs  dsp_profile.rs  golden_check.rs
crates/rf-bench/src/: generators.rs  lib.rs  utils.rs
crates/rf-brain-router/: Cargo.toml
crates/rf-brain-router/src/: classifier.rs  config.rs  cost.rs  lib.rs  provider.rs  router.rs
crates/rf-bridge/: Cargo.toml  RF_BRIDGE_UPGRADE.md
crates/rf-bridge/src/: ab_sim_ffi.rs  advanced_metering.rs  ail_ffi.rs  ale_ffi.rs  api.rs  api_engine.rs  api_metering.rs  api_mixer.rs  api_project.rs  api_transport.rs  audio_io.rs  aurexis_ffi.rs  auto_spatial_ffi.rs  autosave_ffi.rs  chain_advisor_ffi.rs  chain_apply_ffi.rs  chain_auto_ffi.rs  chain_history_ffi.rs  chain_preset_ffi.rs  command_queue.rs  composer_audio_ffi.rs  composer_ffi.rs  connector_ffi.rs  container_ffi.rs  cortex_bridge.rs  cortex_bridge_ffi.rs  cortex_ffi.rs  device_preview_ffi.rs  dpm_ffi.rs  drc_ffi.rs  dsp_commands.rs  energy_governance_ffi.rs  engine_bridge.rs  ffi_bounds.rs  ffi_error.rs  fluxmacro_ffi.rs  gad_ffi.rs  generative_ffi.rs  gpt_bridge_ffi.rs  hrtf_ffi.rs  (+43 more)
crates/rf-bridge/tests/: chain_preset_integration_tests.rs  ffi_roundtrip_tests.rs  unsafe_safety_audit.rs
crates/rf-cloud-sync/: Cargo.toml
crates/rf-cloud-sync/src/: diff.rs  history.rs  lib.rs  snapshot.rs  sync.rs
crates/rf-composer/: Cargo.toml
crates/rf-composer/src/: composer.rs  credentials.rs  lib.rs  prompts.rs  provider.rs  registry.rs  schema.rs
crates/rf-connector/: Cargo.toml
crates/rf-connector/src/: commands.rs  connector.rs  lib.rs  protocol.rs
crates/rf-copilot/: Cargo.toml
crates/rf-copilot/src/: actions.rs  benchmarks.rs  engine.rs  lib.rs  project.rs  suggestions.rs
crates/rf-core/: Cargo.toml
crates/rf-core/src/: channel_strip.rs  comping.rs  edit_mode.rs  error.rs  fibonacci.rs  lib.rs  midi.rs  params.rs  piano_roll.rs  routing.rs  sample.rs  smart_tempo.rs  tempo.rs  theme.rs  time.rs  track.rs  wav_writer.rs  widgets.rs
crates/rf-cortex/: Cargo.toml
crates/rf-cortex/src/: autonomic.rs  awareness.rs  bus.rs  cortex.rs  executor.rs  handle.rs  immune.rs  lib.rs  pattern.rs  reflex.rs  runtime.rs  signal.rs
crates/rf-dsp/: Cargo.toml
crates/rf-dsp/benches/: biquad.rs  dsp_benchmarks.rs  dynamics.rs  simd.rs
crates/rf-dsp/src/: analysis.rs  automation.rs  beat_grid.rs  biquad.rs  channel.rs  convolution.rs  crossfade.rs  delay.rs  delay_compensation.rs  device_preview.rs  dynamics.rs  elastic.rs  elastic_pro.rs  eq.rs  eq_analog.rs  eq_minimum_phase.rs  eq_morph.rs  eq_pro.rs  eq_room.rs  eq_stereo.rs  eq_ultra.rs  lib.rs  linear_phase.rs  loudness_advanced.rs  metering.rs  metering_simd.rs  multiband.rs  oversampling.rs  pitch.rs  reverb.rs  saturation.rs  signal_integrity.rs  simd.rs  smoothing.rs  spatial.rs  spectral.rs  (+4 more)
crates/rf-engine/: Cargo.toml
crates/rf-event/: Cargo.toml
crates/rf-evolution/: Cargo.toml
crates/rf-file/: Cargo.toml
crates/rf-fingerprint/: Cargo.toml
crates/rf-fluxmacro/: Cargo.toml
crates/rf-fuzz/: Cargo.toml
crates/rf-generative/: Cargo.toml
crates/rf-gpt-bridge/: Cargo.toml
crates/rf-host/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  state.rs
(+3694 files in other folders)
