[workspace]
resolver = "2"
members = [
    "crates/rf-core",
    "crates/rf-dsp",
    "crates/rf-audio",
    "crates/rf-engine",
    "crates/rf-state",
    "crates/rf-bridge",
    "crates/rf-file",
    "crates/rf-plugin",
    "crates/rf-viz",
    "crates/rf-video",
    "crates/rf-script",
    "crates/rf-ml",
    "crates/rf-spatial",
    "crates/rf-restore",
    "crates/rf-master",
    "crates/rf-pitch",
    "crates/rf-realtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["VanVinkl Studio"]
license = "Proprietary"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
rf-core = { path = "crates/rf-core" }
rf-dsp = { path = "crates/rf-dsp" }
rf-audio = { path = "crates/rf-audio" }
rf-engine = { path = "crates/rf-engine" }
rf-state = { path = "crates/rf-state" }
rf-bridge = { path = "crates/rf-bridge" }
rf-file = { path = "crates/rf-file" }
rf-plugin = { path = "crates/rf-plugin" }
rf-viz = { path = "crates/rf-viz" }
rf-video = { path = "crates/rf-video" }
rf-script = { path = "crates/rf-script" }
rf-ml = { path = "crates/rf-ml" }
rf-spatial = { path = "crates/rf-spatial" }
rf-restore = { path = "crates/rf-restore" }
rf-master = { path = "crates/rf-master" }
rf-pitch = { path = "crates/rf-pitch" }
rf-realtime = { path = "crates/rf-realtime" }

# Plugin hosting
vst3 = "0.3"
dirs-next = "2.0"

# Audio file I/O
hound = "3.5"
symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "ogg", "wav"] }
flac-bound = "0.5"

# File system
walkdir = "2.5"

# Graphics (for Flutter native rendering)
wgpu = "24.0"
bytemuck = { version = "1.21", features = ["derive"] }

# Audio
cpal = "0.15"
dasp = "0.11"

# DSP
rustfft = "6.2"
realfft = "3.4"

# Concurrency
rtrb = "0.3"
parking_lot = "0.12"
rayon = "1.10"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
anyhow = "1.0"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"              # Maximum size reduction (slower build, smaller binary)
codegen-units = 1        # Better optimization, single codegen unit
panic = "abort"          # Smaller binary, no unwinding
strip = true             # Remove debug symbols
overflow-checks = false  # Disable overflow checks in release (DSP performance)

[profile.dev]
opt-level = 1
incremental = true
debug = 1

[profile.dev.package."*"]
opt-level = 2

[profile.fast]
inherits = "dev"
opt-level = 0
debug = 0
incremental = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
derivable_impls = "allow"
approx_constant = "allow"
