[package]
name = "reelforge-app"
version = "0.1.0"
description = "ReelForge Standalone - Professional Audio Editor"
authors = ["VanVinkl Studio"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "reelforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Our crates
rf-core = { path = "../crates/rf-core" }
rf-dsp = { path = "../crates/rf-dsp" }
rf-audio = { path = "../crates/rf-audio" }
rf-engine = { path = "../crates/rf-engine" }
rf-state = { path = "../crates/rf-state" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"
rtrb = "0.3"

# Utilities
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
