[package]
name = "acc"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1"
time = { version = "0.3", features = ["macros", "formatting"] }
globset = "0.4"
tempfile = "3.10"
