[package]
name = "rf-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rf-core = { workspace = true }
cpal = { workspace = true }
rtrb = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
