[package]
name = "rf-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rf-core = { workspace = true }
cpal = { workspace = true }
rtrb = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Platform-specific real-time thread priority
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }
