[package]
name = "rf-aurexis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AUREXIS™ — Deterministic Slot Audio Intelligence Engine"

[dependencies]
rf-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
rtrb = { workspace = true }

[dev-dependencies]
approx = "0.5"
