[package]
name = "rf-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Flutter-Rust bridge for FluxForge Studio DAW"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Internal crates
rf-core = { path = "../rf-core" }
rf-dsp = { path = "../rf-dsp" }
rf-engine = { path = "../rf-engine" }
rf-state = { path = "../rf-state" }
rf-audio = { path = "../rf-audio" }
rf-file = { path = "../rf-file" }
rf-plugin = { path = "../rf-plugin" }

# Audio I/O
cpal.workspace = true

# Flutter-Rust bridge
flutter_rust_bridge = "2.7"

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "macros"] }

# Concurrency
parking_lot.workspace = true
rtrb.workspace = true
crossbeam-channel.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
once_cell = "1.20"
rayon.workspace = true

