[package]
name = "rf-connector"
version = "0.1.0"
edition = "2021"
description = "FluxForge Engine Connector - Live connection to game engines"
license = "MIT"

[dependencies]
rf-stage = { path = "../rf-stage" }
rf-ingest = { path = "../rf-ingest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
url = "2.5"
log = "0.4"
