[package]
name = "rf-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rf-core = { workspace = true }
rf-dsp = { workspace = true }
rf-audio = { workspace = true }
rf-state = { workspace = true }
rf-file = { path = "../rf-file" }
rf-plugin = { path = "../rf-plugin" }
rtrb = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num_cpus = "1.16"
lazy_static = "1.5"
dashmap = "6.1"
cpal = { workspace = true }

# Audio file decoding (MP3, FLAC, OGG, AAC, WAV)
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "vorbis", "wav", "pcm", "aac", "alac"
] }

[dev-dependencies]
serial_test = "3.1"

[features]
default = ["unified_routing"]
# Use unified RoutingGraph instead of legacy mixer.rs
unified_routing = []
