[package]
name = "rf-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rf-core = { workspace = true }
rf-dsp = { workspace = true }
rf-audio = { workspace = true }
rf-state = { workspace = true }
rf-file = { path = "../rf-file" }
rf-plugin = { path = "../rf-plugin" }
rf-video = { path = "../rf-video" }
rf-master = { path = "../rf-master" }
rf-restore = { path = "../rf-restore" }
rf-ml = { path = "../rf-ml" }
rf-script = { path = "../rf-script" }
rf-event = { path = "../rf-event" }
rf-stage = { path = "../rf-stage" }
rf-ingest = { path = "../rf-ingest" }
rf-connector = { path = "../rf-connector" }
rtrb = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num_cpus = "1.16"
lazy_static = "1.5"
dashmap = "6.1"
smallvec = { version = "1.13", features = ["serde"] }
cpal = { workspace = true }

# Audio file decoding (MP3, FLAC, OGG, AAC, WAV)
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "vorbis", "wav", "pcm", "aac", "alac"
] }

[dev-dependencies]
serial_test = "3.1"

[features]
default = ["unified_routing"]
# Use unified RoutingGraph instead of legacy mixer.rs
unified_routing = []
