[package]
name = "rf-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rf-core = { workspace = true }
rf-dsp = { workspace = true }
rf-audio = { workspace = true }
rf-state = { workspace = true }
rf-file = { path = "../rf-file" }
rf-plugin = { path = "../rf-plugin" }
rf-video = { path = "../rf-video" }
rf-master = { path = "../rf-master" }
rf-restore = { path = "../rf-restore" }
rf-ml = { path = "../rf-ml" }
rf-script = { path = "../rf-script" }
rf-event = { path = "../rf-event" }
rf-cortex = { path = "../rf-cortex" }
rf-stage = { path = "../rf-stage" }
rf-ingest = { path = "../rf-ingest" }
rf-connector = { path = "../rf-connector" }
rf-spatial = { path = "../rf-spatial" }
# rf-r8brain is OFFLINE-ONLY — used by rf-offline for render, not by rf-engine for playback.
# Real-time playback uses sinc_table.rs (zero-alloc Blackman-Harris + SIMD).
rustfft = { workspace = true }
rtrb = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num_cpus = "1.16"
dashmap = "6.1"
smallvec = { version = "1.13", features = ["serde"] }
cpal = { workspace = true }
memmap2 = "0.9"
signalsmith-stretch = "0.1"
# hound dropped — replaced by `rf_core::wav_writer` (16-bit PCM stereo,
# zero deps). Vidi `ffi.rs::orb_capture_last_n_seconds` koji je bio
# jedini call site.

# Audio file decoding - ALL supported formats
# Lossless: wav, flac, aiff, alac (Apple Lossless)
# Lossy: mp3, ogg/vorbis, aac
# Containers: isomp4 (M4A)
symphonia = { version = "0.5", default-features = false, features = [
    "aac",      # AAC decoder (includes ADTS stream support)
    "aiff",     # AIFF container
    "alac",     # Apple Lossless
    "flac",     # FLAC
    "isomp4",   # M4A container (AAC, ALAC)
    "mp3",      # MP3
    "ogg",      # OGG container
    "pcm",      # PCM codec
    "vorbis",   # Vorbis decoder
    "wav",      # WAV container
] }

[dev-dependencies]
serial_test = "3.1"
# FLUX_MASTER_TODO 2.2.2 — WAV writer disk round-trip tests need temp files.
tempfile = "3"

[features]
default = ["unified_routing"]
# Use unified RoutingGraph instead of legacy mixer.rs
unified_routing = []
