[package]
name = "rf-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rf-core = { workspace = true }
hound = { workspace = true }
symphonia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
