[package]
name = "rf-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rf-core = { workspace = true }
hound = { workspace = true }
symphonia = { workspace = true }
flac-bound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

# MP3 encoding
mp3lame-encoder = "0.1"

[dev-dependencies]
tempfile = "3.14"
