[package]
name = "rf-generative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "On-device generative audio inference layer — ONNX (tract) backend, deterministic mock, slot-domain bindings (FAZA 5.1)"

[lib]
name = "rf_generative"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# tract — only pulled in when `onnx` is on. Workspace already pins 0.21 (rf-ml
# uses it). Optional + feature-gated so the default workspace build never
# touches the ~30 s tract compile.
tract-onnx = { workspace = true, optional = true }
tract-core = { workspace = true, optional = true }

[features]
default = []
# Real ONNX inference via tract. Disabled by default so workspace builds stay
# fast and the mock backend is enough for unit / integration tests. Flip on
# when you need actual model execution. 5.1.2 lands the runtime skeleton;
# the production Stable Audio Open Small model file is provisioned out-of-band
# (it's a multi-GB blob — too big for the repo).
onnx = ["dep:tract-onnx", "dep:tract-core"]

[dev-dependencies]
