[package]
name = "rf-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin hosting (VST3/CLAP/AU) for ReelForge"

[dependencies]
rf-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
dirs-next = { workspace = true }

# Plugin formats (optional, enable as needed)
# vst3-sys = { version = "0.1", optional = true }
# clap-sys = { version = "0.3", optional = true }

[features]
default = []
# vst3 = ["vst3-sys"]
# clap = ["clap-sys"]
